--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1453,8 +1453,18 @@ td.blue-white {
     margin: 0;
     line-height: 20px;
     font-size: 1rem;
+    padding: 0 15px 0 0;
+}
+
+.input-block-wrapper__error-wrapper_forgot {
+    text-align: left;
+    color: rgba(232, 0, 0, 0.93);
+    overflow: hidden;
+    margin: 0;
+    line-height: 20px;
+    font-size: 1rem;
     /*padding: 0 15px 0 0;*/
-    padding: 15px 0 15px 15px;
+    padding: 0px 0 15px 15px;
 }
 
 .modal-form-dialog
