--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2004,11 +2004,11 @@ input[type=email], .dropdown-menu__form,
 #merchant-commissions-table tr:hover {
     cursor: pointer;
 }
-#register_button {
+#register_button, #login_button {
     background: #525f74;
 }
 
-#register_button:disabled, #submit-accept:disabled, #submit-btc:disabled {
+#register_button, #login_button:disabled, #submit-accept:disabled, #submit-btc:disabled {
     background: #b9c4d8;
 }
 
