EX-212 add bitcoinreco

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2420,3 +2420,8 @@ input.copyable:hover{
     background-color: #434e60;
 
 }
+
+#btcResultInfoTable td:first-child {
+    word-break: break-all;
+    width: 350px;
+}
