--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2425,3 +2425,8 @@ input.copyable:hover{
     word-break: break-all;
     width: 350px;
 }
+
+.word-wrap-break-work{
+    width: 100%;
+    word-wrap: break-word;
+}
