--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2028,11 +2028,11 @@ input[type=email], .dropdown-menu__form,
 #merchant-commissions-table tr:hover {
     cursor: pointer;
 }
-#register_button, #login_button {
+#register_button, #login_button, #userOperationSubmitButton {
     background: #525f74;
 }
 
-#register_button, #login_button:disabled, #submit-accept:disabled, #submit-btc:disabled {
+#register_button, #login_button:disabled, #submit-accept:disabled, #submit-btc:disabled, #userOperationSubmitButton {
     background: #b9c4d8;
 }
 
