add partner logos

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2472,3 +2472,8 @@ input.copyable:hover{
     width: 100%;
     word-wrap: break-word;
 }
+
+.partners-img{
+    margin-right: 35px;
+    margin-top: 15px;
+}
