--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2193,6 +2193,13 @@ input[type=email], .dropdown-menu__form,
     font-size: 1.5rem;
 }
 
+#user-authoritiesTable {
+    background-color: #FFF;
+}
+#user-authoritiesTable td {
+    font-size: 1.5rem;
+}
+
 #manualBalanceChangeForm .form-item {
     display: inline-block;
     margin: 5px 10px;
